project(kigs)

IF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/libs)
	message(STATUS "CMake enter libs")
	add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/libs libs)
endif()
IF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/framework)
	message(STATUS "CMake enter framework")
	add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/framework framework)
endif()

if(NOT "${KIGS_PLATFORM}" STREQUAL "Android")
	IF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/projects)
		message(STATUS "CMake enter projects")
		add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/projects projects)
	endif()
	IF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/tools)
		message(STATUS "CMake enter tools")
		add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/tools tools)
	endif()
	IF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/tests)
		message(STATUS "CMake enter tests")
		add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/tests tests)
	endif()
endif()