project(projects)
add_subdirectory(Sample1)
if(NOT "${KIGS_PLATFORM}" STREQUAL "Android")
add_subdirectory(Sample2)
add_subdirectory(Sample3)
add_subdirectory(Sample4)
add_subdirectory(Sample5)
add_subdirectory(Sample6)
add_subdirectory(Sample7)
add_subdirectory(Sample8)
endif()
#add_subdirectory(MyProject)